# aidd.md

./: .gitignore  .mcp.json  .mcp.json.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONFIG.md  CONTRIBUTING.md  LICENSE  README.md  SDLC-WORKFLOW.es.md  SDLC-WORKFLOW.md  SYNC.md  The-Workflow.md  WORKFLOW.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.json  (+2 more)
apps/hub/src-tauri/: Cargo.toml  tauri.conf.json
apps/hub/src-tauri/capabilities/: default.json
apps/hub/src-tauri/src/: lib.rs  main.rs
apps/hub/src-tauri/src/application/: framework_service.rs  integration_service.rs  mcp_health_service.rs  mcp_service.rs  memory_service.rs  mod.rs  override_service.rs  project_service.rs
apps/hub/src-tauri/src/commands/: filesystem.rs  mod.rs  project.rs  watcher.rs
apps/hub/src-tauri/src/domain/model/: framework.rs  integration.rs  mcp_health.rs  mcp_server.rs  mod.rs  overrides.rs  project.rs  sync.rs
apps/hub/src-tauri/src/infrastructure/: mod.rs
apps/hub/src-tauri/src/infrastructure/adapters/: mcp_memory_adapter.rs  mod.rs  sqlite_memory_adapter.rs
apps/hub/src-tauri/src/infrastructure/filesystem/: file_adapter.rs  mod.rs
apps/hub/src-tauri/src/infrastructure/integrations/: adapter_trait.rs  claude.rs  cursor.rs  gemini.rs  mcp_config_scanner.rs  mod.rs  vscode.rs  windsurf.rs
apps/hub/src-tauri/src/infrastructure/mcp/: mcp_client.rs
apps/hub/src-tauri/src/infrastructure/persistence/: json_store.rs  mod.rs
apps/hub/src-tauri/src/infrastructure/process/: mcp_process.rs  mod.rs
apps/hub/src-tauri/src/state/: app_state.rs  mod.rs
(+524 files in other folders)
